--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "swright31@hotmail.fr"
         }
     ],
-    "require": {},
+    "require": {
+        "ehime/hello-world": "^1.0"
+    },
 
     "autoload": {
         "psr-4": {"App\\": "src/"}
